use java 17 for build with release target 8 (via #845)